# ChangeLog for dev-perl/XML-Handler-YAWriter
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-Handler-YAWriter/ChangeLog,v 1.11 2004/06/25 01:11:25 agriffis Exp $

  16 Feb 2004; Aron Griffis <agriffis@gentoo.org>
  XML-Handler-YAWriter-0.23-r1.ebuild:
  stable on alpha and ia64

  15 Dec 2003; Jason Wever <weeve@gentoo.org>
  XML-Handler-YAWriter-0.23-r1.ebuild:
  Added ~sparc keyword to fix broken dependencies for app-misc/bins.

*XML-Handler-YAWriter-0.23-r1 (21 Jun 2003)
 
  12 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> :
  Added missing changelog entry.

  13 Feb 2003; Mark Guertin <gerk@gentoo.org> XML-Handler-YAWriter-0.23-r1.ebuild XML-Handler-YAWriter-0.23.ebuild :
  set ppc in keywords

  29 Oct 2002; Seemant Kulleen <seemant@gentoo.org> ChangeLog  :
  forced version bump to install into correct locations

*XML-Handler-YAWriter-0.23 (24 Oct 2002)

  24 Oct 2002; <mcummings@gentoo.org> XML-Handler-YAWriter-0.23.ebuild 
  ChangeLog: Initial import. Ebuild submitted by ryan.shaw@standfordalumni.org.