@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-Handler-YAWriter/Attic/XML-Handler-YAWriter-0.23-r1.ebuild,v 1.9 2004/07/14 21:05:15 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-Handler-YAWriter/Attic/XML-Handler-YAWriter-0.23-r1.ebuild,v 1.10 2005/01/12 23:09:19 gustavoz Exp $
 
 inherit perl-module
 
@@ -13,7 +13,7 @@ SRC_URI="http://cpan.org/modules/by-module/XML/${MY_P}.tar.gz"
 
 LICENSE="Artistic"
 SLOT="0"
-KEYWORDS="x86 amd64 ppc ~sparc alpha ia64"
+KEYWORDS="x86 amd64 ppc sparc alpha ia64"
 IUSE=""
 
 DEPEND=">=dev-perl/libxml-perl-0.07-r1"
