@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-Handler-YAWriter/Attic/XML-Handler-YAWriter-0.23.ebuild,v 1.7 2004/07/14 21:05:15 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-Handler-YAWriter/Attic/XML-Handler-YAWriter-0.23.ebuild,v 1.8 2005/01/12 23:09:19 gustavoz Exp $
 
 inherit perl-module
 
