@@ -1,6 +1,6 @@
-# Copyright 1999-2004 Gentoo Foundation
+# Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-SAX-Base/Attic/XML-SAX-Base-1.04.ebuild,v 1.5 2004/07/14 21:17:05 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-SAX-Base/Attic/XML-SAX-Base-1.04.ebuild,v 1.6 2005/01/12 23:12:50 gustavoz Exp $
 
 inherit perl-module
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://search.cpan.org/~khampton/${P}"
 SRC_TEST="do"
 SLOT="0"
 LICENSE="Artistic"
-KEYWORDS="x86 amd64 ~ppc ~sparc alpha ~mips"
+KEYWORDS="x86 amd64 ~ppc sparc alpha ~mips"
 IUSE=""
 
 DEPEND="${DEPEND}"
