@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/XML-SAX-Base
-# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-SAX-Base/ChangeLog,v 1.4 2004/12/30 01:01:58 ciaranm Exp $
+# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-SAX-Base/ChangeLog,v 1.5 2005/01/12 23:12:50 gustavoz Exp $
+
+  12 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org>
+  XML-SAX-Base-1.04.ebuild:
+  Stable on sparc
 
   30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
   Change encoding to UTF-8 for GLEP 31 compliance
