@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/XML-Handler-YAWriter
-# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-Handler-YAWriter/ChangeLog,v 1.11 2004/06/25 01:11:25 agriffis Exp $
+# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-Handler-YAWriter/ChangeLog,v 1.12 2005/01/12 23:09:19 gustavoz Exp $
+
+  12 Jan 2005; Gustavo Zacarias <gustavoz@gentoo.org>
+  XML-Handler-YAWriter-0.23-r1.ebuild:
+  Stable on sparc
 
   16 Feb 2004; Aron Griffis <agriffis@gentoo.org>
   XML-Handler-YAWriter-0.23-r1.ebuild:
